--- a/comment-link-remove/qc-support-promo-page/css/style.css
+++ b/comment-link-remove/qc-support-promo-page/css/style.css
@@ -11320,6 +11320,20 @@ textarea.qcld_seo-multi-line {
   margin: 0 2px;
 }
 
+.qc-clr-comments-support .qcld-plugins-loading{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width:100%;
+  min-height:50vh;
+  height:100%;
+}
+
+.qc-clr-comments-support .qcld-plugins-loading img {
+  width:250px;
+  height: 250px;
+}
+
 .action-pro-links ul li:last-child a {
   background: #cd5c5c00;
   color: #cd5c5c !important;
